# MIA-ScreenCapture

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG-CRITICAL.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  TODO.md  ai_fix.patch  config.py  exceptions.py  logger_config.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  single_instance.py  utils.py  version.py  wiki_repo
.github/workflows/: ci.yml  release.yml
.sisyphus/run-continuation/: ses_1fd2c87caffegyBnBYDm2k608t.json
api/: AGENTS.md  __init__.py  auth.py  auth_rate_limiter.py  circuit_breaker.py  error_mapping.py  idempotency_store.py  observability.py  operation_store.py  rate_limiter.py  rate_limiter_persistence.py  request_context.py  request_lifecycle.py  routes.py  routes_config.py  routes_multi_recording.py  routes_recording.py  routes_resources.py  routes_schedule.py  routes_webhook.py  runtime_models.py  schemas.py  server.py  swagger.py  websocket.py  websocket_transport.py
app_runtime/: AGENTS.md  __init__.py  api_coordinator.py  constants.py  gui_coordinator.py  recording_coordinator.py  thread_executor.py
cli/: AGENTS.md  __init__.py  parser.py  scheduler.py  templates.py
config/: config.json  tasks.json
core/: AGENTS.md  __init__.py  api_lifecycle_manager.py  api_runtime_manager.py  application_facade.py  application_service.py  container.py  contracts.py  error_format.py  event_bus.py  geometry.py  lifecycle.py  multi_recording_service.py  readiness.py  recording_backend.py  recording_mapper.py  recording_service.py  recording_state.py  recording_types.py  webhook.py
docs/: AGENTS.md  API.md
docs/wiki/: AGENTS.md  API.md  Architecture.md  CLI.md  Configuration-and-Environment.md  GUI.md  Home.md  Installation.md  Logs-and-Diagnostics.md  Quick-Start.md  Scheduler.md  Troubleshooting.md
gui/: AGENTS.md  __init__.py  accessibility.py  desktop_actions.py  hotkeys.py  main_window.py  notifications.py  scheduler_tab.py  tray_icon.py
gui/backends/: AGENTS.md  __init__.py  recording_backend.py
gui/controllers/: AGENTS.md  __init__.py  recording_controller.py  settings_controller.py  status_bar_controller.py  websocket_controller.py
gui/models/: AGENTS.md  __init__.py  recording_state.py  video_codecs.py  websocket_state.py
gui/scheduler/: AGENTS.md  __init__.py  scheduler_tab.py  task_dialog.py
gui/styles/: AGENTS.md  __init__.py  theme.py
gui/views/: AGENTS.md  __init__.py  api_settings_view.py  appearance_view.py  area_selector.py  audio_view.py  capture_view.py  diagnostics_view.py  hotkeys_view.py  loading_overlay.py  output_view.py  readiness_center_view.py  recording_indicator.py  video_view.py
plans/: gui-api-tab-regression-v1.4.5.md  improvement-audit-2026-03-28.md  next-release-roadmap.md  refactor-main-v1.4.6.md  release-note-v1.4.5-smoke.md  release-preflight-v1.4.5.md  task-breakdown-v1.3.x-v1.5.0.md  technical-debt-windows-capture.md  websocket-transport-v1.5.0.md
recorder/: AGENTS.md  __init__.py  audio_recorder.py  encoder.py  ffmpeg_pipeline.py  ffmpeg_writer.py  multi_source_recorder.py  utils.py  video_recorder.py
scheduler/: AGENTS.md  __init__.py  execution_engine.py  task_scheduler.py  task_storage.py  trigger_builder.py
scripts/: AGENTS.md  api_smoke_run.py  check_diff_coverage.py  installer.iss  publish_github_wiki.ps1  screenshot_api.py  take_screenshots.py
tests/: AGENTS.md  __init__.py  conftest.py
tests/integration/: AGENTS.md  __init__.py  test_api.py  test_api_contract_snapshots.py  test_api_error_handling.py  test_api_extended.py  test_api_health_metrics.py  test_api_recording_routes.py  test_api_server_lifecycle.py  test_full_workflow.py  test_rate_limiter_persistence.py  test_recording_flow.py  test_scheduler_integration.py  test_websocket_load.py
tests/unit/: AGENTS.md  __init__.py  test_api_auth.py  test_api_error_mapping.py  test_api_runtime_manager.py  test_api_runtime_models.py  test_api_server.py  test_api_settings_view.py  test_audio_recorder.py  test_audio_recorder_extended.py  test_audio_recorder_threading.py  test_capture_area_selector.py  test_capture_view.py  test_circuit_breaker.py  test_cli_parser.py  test_cli_scheduler.py  test_config.py  test_config_extended.py  test_container.py  test_desktop_actions.py  test_diagnostics.py  test_encoder.py  test_encoder_extended.py  test_error_format.py  test_event_bus.py  test_exceptions.py  test_execution_engine.py  test_ffmpeg_availability.py  test_ffmpeg_pipeline.py  test_ffmpeg_writer.py  test_gui_controllers.py  test_gui_models.py  test_gui_recording_backend.py  test_gui_views.py  test_lifecycle.py  test_logger_config.py  test_main_api_runtime.py  test_main_entrypoint.py  test_main_window.py  test_rate_limiter.py  (+33 more)
tests/unit/api/: test_api_lifecycle_manager.py  test_api_runtime_manager.py  test_api_runtime_models.py  test_api_server.py  test_api_settings_view.py  test_auth_rate_limiter.py  test_circuit_breaker.py  test_rate_limiter_persistence.py  test_schemas.py  test_swagger.py  test_websocket.py  test_websocket_controller.py  test_websocket_state.py  test_websocket_transport.py
tests/unit/config/: test_config.py  test_config_extended.py  test_exceptions.py
tests/unit/core/: test_application_service.py  test_container.py  test_lifecycle.py  test_multi_recording_service.py  test_readiness.py  test_recording_service.py
tests/unit/gui/: test_appearance_view.py  (+13 more)
(+14 files in other folders)
