[project]
name = "mia-screencapture"
version = "1.2.0"
description = "Профессиональная программа для записи видео с экрана с GUI, REST API и планировщиком задач"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "MIA Development Team" }
]
keywords = ["screen", "capture", "video", "recording", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Capture",
]

dependencies = [
    # GUI Framework
    "PyQt6>=6.4.0",
    
    # Screen Capture
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    
    # Video Processing
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    
    # Audio Recording
    "pyaudio>=0.2.13",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    
    # FFmpeg Integration
    "ffmpeg-python>=0.2.0",
    
    # REST API
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "waitress>=2.1.2",
    
    # Task Scheduling
    "apscheduler>=3.10.0",
    
    # System Utilities
    "psutil>=5.9.0",
    "pywin32>=305; sys_platform == 'win32'",
    
    # Configuration
    "python-dotenv>=1.0.0",
    
    # Window Management (platform-specific)
    "pygetwindow>=0.0.9; sys_platform == 'win32' or sys_platform == 'darwin'",
    "python-xlib>=0.33; sys_platform == 'linux'",
    
    # Audio System Control (Windows)
    "pycaw>=20230407; sys_platform == 'win32'",
    
    # Type hints support
    "typing-extensions>=4.7.0",
    
    # Data Validation
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    
    # Code Quality
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# Точка входа для CLI отключена, так как проект запускается через python main.py
# Для создания консольной команды требуется структура пакета в src/
# [project.scripts]
# mia-capture = "mia_screencapture.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "cli", "gui", "recorder", "scheduler"]

[tool.hatch.build.targets.sdist]
include = [
    "/api",
    "/cli",
    "/gui",
    "/recorder",
    "/scheduler",
    "/tests",
    "main.py",
    "config.py",
    "logger_config.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

# ====================
# Ruff Configuration
# ====================
[tool.ruff]
target-version = "py39"
line-length = 79
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["api", "cli", "gui", "recorder", "scheduler"]

# ====================
# MyPy Configuration
# ====================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true

# Модули с полными type hints
[[tool.mypy.overrides]]
module = [
    "exceptions",
    "api.auth",
    "api.schemas",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Модули с частичными type hints (требуют доработки)
[[tool.mypy.overrides]]
module = [
    "api.routes",
    "api.server",
    "recorder.*",
    "scheduler.*",
    "gui.*",
    "cli.*",
    "config",
    "main",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ====================
# Pytest Configuration
# ====================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: медленные тесты",
    "integration: интеграционные тесты",
    "windows: тесты только для Windows",
    "linux: тесты только для Linux",
    "macos: тесты только для macOS",
]

# ====================
# Coverage Configuration
# ====================
[tool.coverage.run]
source = ["api", "cli", "gui", "recorder", "scheduler"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20260107",
]
